@@ -54,7 +54,7 @@ extract_bzip2 = extract_gzip = extract_compress = extract_xz = extract_lzma = (
 
 extract_zip = extract_rar = extract_cab = extract_chm = extract_arj = extract_cpio = (
     extract_rpm
-) = extract_deb = extract_iso = extract_vhd = extract_7z
+) = extract_deb = extract_iso = extract_vhd = extract_wim = extract_7z
 
 
 def list_7z(archive, compression, cmd, verbosity, interactive, password=None):
@@ -73,8 +73,8 @@ def list_7z(archive, compression, cmd, verbosity, interactive, password=None):
 list_bzip2 = list_gzip = list_zip = list_compress = list_rar = list_cab = list_chm = (
     list_arj
 ) = list_cpio = list_rpm = list_deb = list_iso = list_xz = list_lzma = list_vhd = (
-    list_7z
-)
+    list_wim
+) = list_7z
 
 
 def test_7z(archive, compression, cmd, verbosity, interactive, password=None):
@@ -93,8 +93,8 @@ def test_7z(archive, compression, cmd, verbosity, interactive, password=None):
 test_bzip2 = test_gzip = test_zip = test_compress = test_rar = test_cab = test_chm = (
     test_arj
 ) = test_cpio = test_rpm = test_deb = test_iso = test_xz = test_lzma = test_vhd = (
-    test_7z
-)
+    test_wim
+) = test_7z
 
 
 def create_7z(
@@ -165,5 +165,19 @@ def create_bzip2(
     if password:
         cmdlist.append(f'-p{password}')
     cmdlist.extend(['-tbzip2', '--', archive])
+    cmdlist.extend(filenames)
+    return cmdlist
+
+
+def create_wim(
+    archive, compression, cmd, verbosity, interactive, filenames, password=None
+):
+    """Create a WIM archive."""
+    cmdlist = [cmd, 'a']
+    if not interactive:
+        cmdlist.append('-y')
+    if password:
+        cmdlist.append(f'-p{password}')
+    cmdlist.extend(['-twim', '--', archive])
     cmdlist.extend(filenames)
     return cmdlist
