@@ -28,23 +28,30 @@ extract_bzip2 = extract_gzip = extract_compress = extract_xz = extract_lzma = (
 
 extract_zip = extract_rar = extract_cab = extract_chm = extract_arj = extract_cpio = (
     extract_rpm
-) = extract_deb = extract_iso = extract_vhd = extract_7z
+) = extract_deb = extract_iso = extract_vhd = extract_wim = extract_7z
 
 from .p7zip import list_7z
 
 list_bzip2 = list_gzip = list_zip = list_compress = list_rar = list_cab = list_chm = (
     list_arj
 ) = list_cpio = list_rpm = list_deb = list_iso = list_xz = list_lzma = list_vhd = (
-    list_7z
-)
+    list_wim
+) = list_7z
 
 from .p7zip import test_7z
 
 test_bzip2 = test_gzip = test_zip = test_compress = test_rar = test_cab = test_chm = (
     test_arj
 ) = test_cpio = test_rpm = test_deb = test_iso = test_xz = test_lzma = test_vhd = (
-    test_7z
-)
+    test_wim
+) = test_7z
 
 # ruff: noqa: F401
-from .p7zip import create_7z, create_zip, create_xz, create_gzip, create_bzip2
+from .p7zip import (
+    create_7z,
+    create_zip,
+    create_xz,
+    create_gzip,
+    create_bzip2,
+    create_wim,
+)
